<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.ActivityRegister">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:contentInsetEnd="0dp"
        app:contentInsetLeft="0dp"
        app:contentInsetRight="0dp"
        app:contentInsetStart="0dp"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/mIvBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:clickable="true"
                android:contentDescription="@null"
                android:focusable="true"
                android:foreground="?attr/selectableItemBackgroundBorderless"
                android:padding="@dimen/activity_horizontal_margin"
                android:src="@drawable/ic_arrow_back" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:maxLines="1"
                android:singleLine="true"
                android:text="@string/lbl_create_account"
                android:textColor="@color/white"
                android:textSize="@dimen/fontsize_18"
                android:textStyle="bold"/>
        </RelativeLayout>
    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:layout_below="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingStart="@dimen/size_30"
        android:paddingEnd="@dimen/size_30"
        android:background="@color/white">

        <com.om.sitaramfrem.view.CustomTextInputLayout
            android:id="@+id/mTilName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_20"
            app:errorTextAppearance="@style/ErrorTextAppearance"
            app:hintEnabled="false">
            <EditText
                android:id="@+id/mEdtName"
                android:layout_width="match_parent"
                android:layout_height="?attr/listPreferredItemHeightSmall"
                android:hint="@string/lbl_name"
                android:padding="@dimen/size_10"
                android:textColor="@color/black"
                android:textSize="@dimen/fontsize_16"
                android:imeOptions="actionNext"
                android:inputType="textCapWords"
                android:maxLines="1"
                android:singleLine="true"
                android:maxLength="120"
                android:digits="@string/reg_alpha_space"
                android:background="@drawable/shape_primary_stock"/>
        </com.om.sitaramfrem.view.CustomTextInputLayout>

        <com.om.sitaramfrem.view.CustomTextInputLayout
            android:id="@+id/mTilMobile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorTextAppearance="@style/ErrorTextAppearance"
            android:layout_marginTop="@dimen/size_20"
            app:hintEnabled="false">

            <EditText
                android:id="@+id/mEdtMobile"
                android:layout_width="match_parent"
                android:layout_height="?attr/listPreferredItemHeightSmall"
                android:hint="@string/lbl_whatsapp_number"
                android:imeOptions="actionNext"
                android:inputType="numberSigned"
                android:maxLength="10"
                android:maxLines="1"
                android:padding="@dimen/size_10"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textColorHint="@color/colorGray"
                android:textSize="@dimen/fontsize_16"
                android:background="@drawable/shape_primary_stock"
                android:digits="@string/reg_number"/>

        </com.om.sitaramfrem.view.CustomTextInputLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_5"
            android:text="@string/hint_enter_whatsapp_number_only"
            android:textColor="@color/black"
            android:textSize="@dimen/fontsize_14"
            android:textStyle="bold" />

        <com.om.sitaramfrem.view.CustomTextInputLayout
            android:id="@+id/mTilAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_20"
            app:errorTextAppearance="@style/ErrorTextAppearance"
            app:hintEnabled="false">
            <EditText
                android:id="@+id/mEdtAddress"
                android:layout_width="match_parent"
                android:layout_height="?attr/listPreferredItemHeightSmall"
                android:hint="@string/lbl_address"
                android:padding="@dimen/size_10"
                android:textColor="@color/black"
                android:textSize="@dimen/fontsize_16"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:maxLines="1"
                android:singleLine="true"
                android:background="@drawable/shape_primary_stock"/>
        </com.om.sitaramfrem.view.CustomTextInputLayout>

        <com.om.sitaramfrem.view.CustomTextInputLayout
            android:id="@+id/mTilPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_20"
            app:errorTextAppearance="@style/ErrorTextAppearance"
            app:passwordToggleEnabled="true"
            app:hintEnabled="false">

            <EditText
                android:id="@+id/mEdtPassword"
                android:layout_width="match_parent"
                android:layout_height="?attr/listPreferredItemHeightSmall"
                android:hint="@string/lbl_password"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:maxLines="1"
                android:padding="@dimen/size_10"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textColorHint="@color/colorGray"
                android:textSize="@dimen/fontsize_16"
                android:maxLength="60"
                android:background="@drawable/shape_primary_stock"/>

        </com.om.sitaramfrem.view.CustomTextInputLayout>

        <com.om.sitaramfrem.view.CustomTextInputLayout
            android:id="@+id/mTilCPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_20"
            app:errorTextAppearance="@style/ErrorTextAppearance"
            app:passwordToggleEnabled="true"
            app:hintEnabled="false">

            <EditText
                android:id="@+id/mEdtCPassword"
                android:layout_width="match_parent"
                android:layout_height="?attr/listPreferredItemHeightSmall"
                android:hint="@string/lbl_confirm_password"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:maxLines="1"
                android:padding="@dimen/size_10"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textColorHint="@color/colorGray"
                android:textSize="@dimen/fontsize_16"
                android:maxLength="60"
                android:background="@drawable/shape_primary_stock"/>

        </com.om.sitaramfrem.view.CustomTextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/mBtnRegister"
            android:layout_width="match_parent"
            android:layout_height="?attr/listPreferredItemHeightSmall"
            android:layout_marginStart="@dimen/size_10"
            android:layout_marginTop="@dimen/size_30"
            android:layout_marginEnd="@dimen/size_10"
            android:background="@drawable/shape_primary_radius"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?attr/selectableItemBackground"
            android:text="@string/lbl_submit"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/fontsize_16" />
    </LinearLayout>
</RelativeLayout>