<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.FragmentProfile"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="@dimen/size_30"
        android:paddingEnd="@dimen/size_30">
        <com.om.sitaramfrem.view.CustomTextInputLayout
            android:id="@+id/mTilName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_20"
            app:errorTextAppearance="@style/ErrorTextAppearance"
            app:hintEnabled="false">
            <EditText
                android:id="@+id/mEdtName"
                android:layout_width="match_parent"
                android:layout_height="?attr/listPreferredItemHeightSmall"
                android:hint="@string/lbl_name"
                android:padding="@dimen/size_10"
                android:textColor="@color/black"
                android:textSize="@dimen/fontsize_16"
                android:imeOptions="actionNext"
                android:inputType="textCapWords"
                android:maxLines="1"
                android:singleLine="true"
                android:maxLength="120"
                android:digits="@string/reg_alpha_space"
                android:background="@drawable/shape_primary_stock"/>
        </com.om.sitaramfrem.view.CustomTextInputLayout>

        <com.om.sitaramfrem.view.CustomTextInputLayout
            android:id="@+id/mTilMobile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorTextAppearance="@style/ErrorTextAppearance"
            android:layout_marginTop="@dimen/size_20"
            app:hintEnabled="false">

            <EditText
                android:id="@+id/mEdtMobile"
                android:layout_width="match_parent"
                android:layout_height="?attr/listPreferredItemHeightSmall"
                android:hint="@string/lbl_mobile_number"
                android:imeOptions="actionNext"
                android:inputType="numberSigned"
                android:maxLength="10"
                android:maxLines="1"
                android:padding="@dimen/size_10"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textColorHint="@color/colorGray"
                android:textSize="@dimen/fontsize_16"
                android:background="@drawable/shape_primary_stock"
                android:enabled="false"
                android:alpha=".5"/>

        </com.om.sitaramfrem.view.CustomTextInputLayout>

        <com.om.sitaramfrem.view.CustomTextInputLayout
            android:id="@+id/mTilAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_20"
            app:errorTextAppearance="@style/ErrorTextAppearance"
            app:hintEnabled="false">
            <EditText
                android:id="@+id/mEdtAddress"
                android:layout_width="match_parent"
                android:layout_height="?attr/listPreferredItemHeightSmall"
                android:hint="@string/lbl_address"
                android:padding="@dimen/size_10"
                android:textColor="@color/black"
                android:textSize="@dimen/fontsize_16"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:maxLines="1"
                android:singleLine="true"
                android:background="@drawable/shape_primary_stock"/>
        </com.om.sitaramfrem.view.CustomTextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/mBtnUpdate"
            android:layout_width="match_parent"
            android:layout_height="?attr/listPreferredItemHeightSmall"
            android:layout_marginStart="@dimen/size_10"
            android:layout_marginTop="@dimen/size_30"
            android:layout_marginEnd="@dimen/size_10"
            android:background="@drawable/shape_primary_radius"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?attr/selectableItemBackground"
            android:text="@string/lbl_update"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/fontsize_16" />
    </LinearLayout>

</RelativeLayout>